--- a/GestionUtilisateur-FrontEnd-master3/src/assets/i18n/fr.json
+++ b/GestionUtilisateur-FrontEnd-master3/src/assets/i18n/fr.json
@@ -6,7 +6,7 @@
 	"SideBar.MDepartement": "Département",
 	"SideBar.MDiplome": "Diplôme",
 	"SideBar.MDonneB": "Données des Bases",
-	"SideBar.MEnseignantF": "Enseignant Fonctionnaire d'état",
+	"SideBar.MEnseignantF": "Enseignant Fonctionnaire de l'état",
 	"SideBar.MEnseignantL": "Enseignant Libre",
 	"SideBar.MEnseignantV": "Enseignant Vacataire",
 	"SideBar.MEtat": "Les États",
@@ -52,11 +52,11 @@
 	"SideBar.SSMEtatEn": "Par Enseignant",
 	"SideBar.SSMEtatM": "Par Mois",
 	"SideBar.SSMEtatType": "Par Type Congé",
-	"SideBar.LDepartement": "Liste des Enseignants Par Departement",
+	"SideBar.LDepartement": "Liste des Enseignants Par Département",
 	"SideBar.LGrade": "Liste des Enseignants Par Grade",
 	"SideBar.LCorps": "Liste des Enseignants Par Corps",
-	"SideBar.LActif": "Liste des Enseignants Actif",
-	"SideBar.LInactif": "Liste des Enseignants Inactif",
+	"SideBar.LActif": "Liste des Enseignants Actifs",
+	"SideBar.LInactif": "Liste des Enseignants Inactifs",
 	"Table.CA": "à",
 	"Table.CAdmin": "Liste des Administratifs",
 	"Table.CAdministratif": "Administratif",
@@ -67,9 +67,9 @@
 	"Table.CAnnuler": "Annuler",
 	"Table.CAttestationT": "Attestation de travail",
 	"Table.CAutorisation": "Autorisation",
-	"Table.CBienvenu": "Bienvenu",
+	"Table.CBienvenu": "Bienvenue",
 	"Table.CCIN": "C.I.N",
-	"Table.CChargeSem": "chargé semestrielle",
+	"Table.CChargeSem": "charge semestrielle",
 	"Table.CDateDebut": "Date de Début",
 	"Table.CDateDip": "Date de Diplôme",
 	"Table.CDateFin": "Date de Fin",
@@ -89,13 +89,13 @@
 	"Table.CHistoriqueConge": "Historique des Congés",
 	"Table.CHistoriqueCongeDe": "Historique des Congés de",
 	"Table.CID": "ID",
-	"Table.CLieuNais": "Lien de naissance",
+	"Table.CLieuNais": "Lieu de naissance",
 	"Table.CAccepter": "Accepter",
 	"Table.CRefuser": "Refuser",
 	"Table.CCongeNonAuto": "Congé sans Autorisation",
 	"Table.CCongeAuto": "Congé Avec Autorisation",
-	"Table.CListeEnseignantV": "Liste des Enseignant Vacataire",
-	"Table.CListeEnsgV": "Listes des Enseignants Vacataires",
+	"Table.CListeEnseignantV": "Liste des Enseignants Vacataires",
+	"Table.CListeEnsgV": "Liste des Enseignants Vacataires",
 	"Table.CLogin": "Login",
 	"Table.CMatricule": "Matricule",
 	"Table.CModalConge": "Demande de Congé de",
@@ -140,11 +140,19 @@
 	"Table.Action":"Action",
 	"SideBar.Statistique":"Nombre des enseignants",
 	"SideBar.Mutation":"Mutation des enseignants",
-	"SideBar.EnseiContrat":"Les enseignants Contractuel",
+	"SideBar.EnseiContrat":"Les enseignants Contractuels",
 	"Table.Actif":"Actif",
 	"Table.Oui":"Oui",
 	"Table.Non":"Non",
 	"Table.Importation":"Importer les données",
-	"Table.Enseignant":"Enseignant Permanent",
-	"Table.Stat":"Nomber des enseignants permanent par département"
+	"Table.Enseignant":"Enseignant permanent",
+	"Table.EnseignantL":"Enseignant libre",
+	"Table.EnseignantF":"Enseignant fonctionnaire de l'état",
+	"Table.administratif":"Administratif",
+	"Table.anneUniv":"Année Universitaire",
+	"Table.semestre":"Semestre",
+	"Table.cours":"Heurs de cours",
+	"Table.Td":"Heurs de TD",
+	"Table.tp":"Heurs de TP",
+	"Table.Stat":"Nombre des enseignants permanents par département"
 }
